--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,12 @@ body,
 :root {
   height: 100%
 }
+
+.rdrMonth {
+  width: 100% !important;
+}
+
+.rdrCalendarWrapper {
+  width: 100% !important;
+  font-size: 16px !important;
+}
